# INFT2503

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  temperatur  temperatur.cpp  temperaturB  temperaturB.cpp
Assignment2/: CMakeLists.txt  oppgave1  oppgave1.cpp  oppgave4  oppgave4.cpp  oppgave5  oppgave5.cpp  oppgave6  oppgave6.cpp
Assignment3/: CMakeLists.txt  oppgave1og2.cpp  oppgave3.cpp  oppgave4.cpp
Assignment4/: CMakeLists.txt  oppgave1.cpp
Assignment4/oppgave2/: main.cpp
Assignment5/: CMakeLists.txt  assignment1.cpp
Assignment6/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Assignment7/: CMakeLists.txt  fraction.hpp  main.cpp
Assignment7/oppgave1/: fraction.cpp  fraction.hpp  main.cpp
Assignment7/oppgave2/: CMakeLists.txt  Set.hpp  main.cpp
Assignment8/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Assignment9/: CMakeLists.txt  oppgave1a.cpp  oppgave1b.cpp  oppgave1c.cpp
