cmake_minimum_required(VERSION 3.5)

project(assignment02)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Wall -Wextra")

add_executable(assignment02-1 oppgave1.cpp)
add_executable(assignment02-4 oppgave4.cpp)
add_executable(assignment02-5 oppgave5.cpp)
add_executable(assignment02-6 oppgave6.cpp)